--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,18 @@
 cmake_minimum_required(VERSION 3.12)
 project(baldur)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 17)
 
 # add slang library
 add_subdirectory(extern/slang)
+add_subdirectory(extern/googletest/)
+
 
 # add main library
 add_subdirectory(src)
+
+# tests
+include(GoogleTest)
+include(CTest)
+enable_testing()
+add_subdirectory(tests)
