add symbol table tree

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(baldur sv.cc symbol.cc)
+add_library(baldur sv.cc symbol.cc util.cc)
 
 target_link_libraries(baldur slangcompiler)
 target_include_directories(baldur PRIVATE ../extern/slang/include
